--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "multiplayer-tiktaktoe-frontend",
+  "name": "multi-tic-tac-toe",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
